--- a/angular.json
+++ b/angular.json
@@ -134,6 +134,41 @@
           }
         }
       }
+    },
+    "currency": {
+      "root": "projects/ngx-currency",
+      "sourceRoot": "projects/ngx-currency/src",
+      "projectType": "library",
+      "prefix": "nomad",
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-ng-packagr:build",
+          "options": {
+            "tsConfig": "projects/ngx-currency/tsconfig.lib.json",
+            "project": "projects/ngx-currency/ng-package.json"
+          }
+        },
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "main": "projects/ngx-currency/src/test.ts",
+            "tsConfig": "projects/ngx-currency/tsconfig.spec.json",
+            "karmaConfig": "projects/ngx-currency/karma.conf.js"
+          }
+        },
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": [
+              "projects/ngx-currency/tsconfig.lib.json",
+              "projects/ngx-currency/tsconfig.spec.json"
+            ],
+            "exclude": [
+              "**/node_modules/**"
+            ]
+          }
+        }
+      }
     }
   },
   "defaultProject": "ngx-currency"
