--- a/.release-it.json
+++ b/.release-it.json
@@ -1,8 +1,10 @@
 {
   "non-interactive": true,
-  "buildCommand": "npx ng build currency",
-  "afterReleaseCommand": "echo Successfully released ${version} to ${dist.repo}.",
-  "changelogCommand": "(tmpfile=`mktemp` && { git-release-notes [REV_RANGE] markdown | cat - CHANGELOG.md > $tmpfile && mv $tmpfile CHANGELOG.md; })",
+
+  "hooks": {
+    "after:bump": ["npx ng build currency", "npx auto-changelog -p"],
+    "after:release": "echo Successfully released ${version} to ${dist.repo}."
+  },
   "npm": {
     "publishPath": "./dist/nomadreservations/ngx-currency"
   },
