--- a/.release-it.json
+++ b/.release-it.json
@@ -6,7 +6,7 @@
     "after:release": "echo Successfully released ${version} to ${dist.repo}."
   },
   "npm": {
-    "publishPath": "./dist/nomadreservations/ngx-currency"
+    "publishPath": "./dist"
   },
   "github": {
     "release": false
