chore(): finish upgrade to angular 8

--- a/package.json
+++ b/package.json
@@ -11,40 +11,41 @@
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
-  "license": "MIT",
-  "peerDependencies": {},
+  "peerDependencies": {
+    "@angular/core": "~8.0.0"
+  },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.803.8",
-    "@angular/animations": "~9.0.0-next.9",
-    "@angular/cli": "~7.3.7",
-    "@angular/common": "~9.0.0-next.9",
-    "@angular/compiler": "~9.0.0-next.9",
-    "@angular/compiler-cli": "~9.0.0-next.9",
-    "@angular/core": "~9.0.0-next.9",
-    "@angular/forms": "~9.0.0-next.9",
-    "@angular/language-service": "~9.0.0-next.9",
-    "@angular/platform-browser": "~9.0.0-next.9",
-    "@angular/platform-browser-dynamic": "~9.0.0-next.9",
-    "@angular/router": "~9.0.0-next.9",
-    "@types/jasmine": "~2.8.8",
-    "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~8.9.4",
-    "codelyzer": "~4.5.0",
-    "core-js": "^2.5.4",
-    "jasmine-core": "~2.99.1",
+    "@angular/animations": "~8.2.9",
+    "@angular/cli": "~8.3.8",
+    "@angular/common": "~8.2.9",
+    "@angular/compiler": "~8.2.9",
+    "@angular/compiler-cli": "~8.2.9",
+    "@angular/core": "~8.2.9",
+    "@angular/forms": "~8.2.9",
+    "@angular/language-service": "~8.2.9",
+    "@angular/platform-browser": "~8.2.9",
+    "@angular/platform-browser-dynamic": "~8.2.9",
+    "@angular/router": "~8.2.9",
+    "@types/jasmine": "~3.4.2",
+    "@types/jasminewd2": "~2.0.8",
+    "@types/node": "~12.7.11",
+    "codelyzer": "~5.1.2",
+    "core-js": "^3.2.1",
+    "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~4.0.0",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.1",
-    "karma-jasmine": "~1.1.2",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "ng-packagr": "^5.5.0",
-    "protractor": "~5.4.0",
-    "release-it": "^12.3.6",
+    "karma": "~4.3.0",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage-istanbul-reporter": "~2.1.0",
+    "karma-jasmine": "~2.0.1",
+    "karma-jasmine-html-reporter": "^1.4.2",
+    "ng-packagr": "^5.5.1",
+    "protractor": "~5.4.2",
+    "release-it": "^12.4.2",
     "rxjs": "~6.5.3",
-    "ts-node": "~7.0.0",
-    "tslib": "^1.9.0",
-    "tslint": "~5.11.0",
+    "ts-node": "~8.4.1",
+    "tslib": "^1.10.0",
+    "tslint": "~5.20.0",
     "typescript": "~3.5.3",
     "zone.js": "~0.10.2"
   },
