--- a/.release-it.json
+++ b/.release-it.json
@@ -2,8 +2,11 @@
   "non-interactive": true,
 
   "hooks": {
-    "after:bump": ["npm run build", "npx auto-changelog -p"],
-    "after:release": "echo Successfully released ${version} to ${dist.repo}."
+    "after:release": "echo Successfully released ${name} v${version} to ${repo.repository}.",
+    "after:bump": [
+      "npm run build",
+      "npx auto-changelog -p"
+    ]
   },
   "npm": {
     "publishPath": "./dist"
